# summit-data-challenge

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
notebooks/: 01_prune_bjobs.ipynb  02_prune_disk.ipynb  03_prune_io.ipynb  04_prune_meminfo.ipynb  05_prune_top.ipynb  06_prune_ps.ipynb  07_prune_vmstat.ipynb  08_prune_w.ipynb  Readme.md  process_log.ipynb
src/smc2022_dc2/: logs2feather.py
