[metadata]
name = smc2022_dc
version = 0.1.0
author = Brett Eiffert, Chen Zhang
description = Summit login nodes usage analysis
keywords = summit, HPC
long_description = file: README.md, LICENSE
license = BSD 3-Clause License
url = https://github.com/brettceiffert/summit-data-challenge
project_urls =
    Bug Tracker = https://github.com/brettceiffert/summit-data-challenge/issues
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages = find:
python_requires = >= 3.7
install_requires =
    numpy
    scipy

[options.packages.find]
where = src
exclude =
    tests
    notebooks

[options.extras_require]
tests = pytest

[aliases]
test = pytest
